--- a/deno.json
+++ b/deno.json
@@ -5,13 +5,12 @@
     ".": "./mod.ts"
   },
   "tasks": {
-    "lock": "deno cache --lock=deno.lock --lock-write ./mod.ts",
+    "lock": "deno cache --lock=deno.lock --lock-write mod.ts src/**/*.*.ts"
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^16.0.0",
-    "#std/assert": "jsr:@std/assert@^0.223",
-    "@reflect": "https://deno.land/x/deno_reflect@v0.2.1/mod.ts",
-    "@inject": "https://raw.githubusercontent.com/thomas3577/deno-dependency-injector/main/mod.ts"
+    "@std/assert": "jsr:@std/assert@0.223",
+    "@dx/inject": "jsr:@dx/inject@0.1.3"
   },
   "compilerOptions": {
     "strict": true,
