--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,7 @@
     "lock": "deno cache --lock=deno.lock --lock-write mod.ts src/**/*.*.ts"
   },
   "imports": {
-    "@oak/oak": "jsr:@oak/oak@^16.0.0",
+    "@oak/oak": "jsr:@oak/oak@16.0.0",
     "@std/assert": "jsr:@std/assert@0.223",
     "@dx/inject": "jsr:@dx/inject@0.1.3"
   },
