--- a/deno.json
+++ b/deno.json
@@ -12,6 +12,17 @@
     "@std/assert": "jsr:@std/assert@0.223",
     "@dx/inject": "jsr:@dx/inject@0.1.3"
   },
+  "publish": {
+    "exclude": [
+      ".github",
+      "demo",
+      ".gitignore",
+      ".editorconfig",
+      "deno.lock",
+      "*.code-workspace",
+      "**/*.test.ts"
+    ]
+  },
   "compilerOptions": {
     "strict": true,
     "experimentalDecorators": true,
