--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@dx/oakest",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "exports": {
     ".": "./mod.ts"
   },
@@ -18,6 +18,7 @@
       "demo",
       ".gitignore",
       ".editorconfig",
+      "cspell.json",
       "deno.lock",
       "*.code-workspace",
       "**/*.test.ts"
