--- a/deno.json
+++ b/deno.json
@@ -1,16 +1,17 @@
 {
   "name": "@dx/oakest",
-  "version": "0.0.16",
+  "version": "0.0.17",
   "exports": {
     ".": "./mod.ts"
   },
   "tasks": {
+    "demo": "deno run -A ./demo/main.ts",
     "lock": "deno cache --lock=deno.lock --lock-write mod.ts **/*.*.ts"
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@16.1",
     "@std/assert": "jsr:@std/assert@0.226",
-    "@dx/inject": "jsr:@dx/inject@0.1.7"
+    "@dx/inject": "jsr:@dx/inject@0.1.11"
   },
   "publish": {
     "exclude": [
