--- a/deno.json
+++ b/deno.json
@@ -1,17 +1,17 @@
 {
   "name": "@dx/oakest",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "exports": {
     ".": "./mod.ts"
   },
   "tasks": {
     "demo": "deno run -A ./demo/main.ts",
-    "lock": "deno cache --lock=deno.lock mod.ts **/*.*.ts"
+    "lock": "deno cache --lock=deno.lock **/*.*.ts"
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@16.1",
     "@std/assert": "jsr:@std/assert@1",
-    "@dx/inject": "jsr:@dx/inject@0.1.13"
+    "@dx/inject": "jsr:@dx/inject@0.1.14"
   },
   "publish": {
     "exclude": [
