--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,12 @@
       "request": "launch",
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "deno",
-      "runtimeArgs": ["run", "--inspect-brk", "-A", "./demo/main.ts"],
+      "runtimeArgs": [
+        "run", 
+        "--inspect-brk", 
+        "-A", 
+        "./demo/main.ts"
+      ],
       "outputCapture": "std",
       "attachSimplePort": 9229
     }
