Updated libs and deno

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
   "cSpell.allowCompoundWords": true,
   "cSpell.words": [
     "biga816",
+    "denoland",
     "implementings",
     "injectables",
     "oakest"
