--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "*"
 
 jobs:
   publish:
@@ -20,7 +22,7 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v2.0.3
         with:
-          deno-version: v2.6.0
+          deno-version: v2.6.7
 
       - name: Verify formatting
         run: deno fmt --check
@@ -32,4 +34,5 @@ jobs:
         run: deno test
 
       - name: Publish package
+        if: startsWith(github.ref, 'refs/tags/')
         run: deno publish
